[gd_scene load_steps=11 format=3 uid="uid://b2ejrrlqhsrk1"]

[ext_resource type="Script" path="res://scripts/GridManager.gd" id="1_e4uup"]
[ext_resource type="Script" path="res://scripts/TileFactory.gd" id="2_2n4hi"]
[ext_resource type="Script" path="res://scripts/CameraController.gd" id="3_5m6qm"]
[ext_resource type="Script" path="res://scripts/DataParser.gd" id="4_68v27"]
[ext_resource type="Script" path="res://scripts/DeveloperTools.gd" id="5_dnmra"]
[ext_resource type="Script" path="res://scripts/MapInteractionHandler.gd" id="6_lj36n"]
[ext_resource type="Script" path="res://scripts/InitialSetup.gd" id="7_vxdsr"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hx7ma"]
albedo_color = Color(0.8, 0.8, 0.8, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4i8hr"]
albedo_color = Color(1, 1, 0.6, 1)
emission_enabled = true
emission = Color(0.5, 0.5, 0.3, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3g3tb"]
albedo_color = Color(0.6, 1, 0.6, 1)
emission_enabled = true
emission = Color(0.3, 0.5, 0.3, 1)

[node name="Main" type="Node3D"]

[node name="GridManager" type="Node" parent="."]
script = ExtResource("1_e4uup")

[node name="TileFactory" type="Node3D" parent="GridManager"]
script = ExtResource("2_2n4hi")
default_material = SubResource("StandardMaterial3D_hx7ma")
highlight_material = SubResource("StandardMaterial3D_4i8hr")
selection_material = SubResource("StandardMaterial3D_3g3tb")

[node name="CameraController" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 35731.1, 0, -26041.9)
script = ExtResource("3_5m6qm")
camera_distance = 15.0
max_zoom = 25.0
pan_speed = 15.0
edge_pan_margin = 30.0

[node name="Camera3D" type="Camera3D" parent="CameraController"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 15, 0)
projection = 1
size = 25.0
far = 1000.0

[node name="DataParser" type="Node" parent="."]
script = ExtResource("4_68v27")

[node name="DeveloperTools" type="Node" parent="."]
script = ExtResource("5_dnmra")

[node name="MapInteractionHandler" type="Node" parent="."]
script = ExtResource("6_lj36n")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, -0.75, 0.433013, 0, 10, 0)
shadow_enabled = true

[node name="GameManager" type="Node" parent="."]

[node name="InitialSetup" type="Node" parent="GameManager"]
script = ExtResource("7_vxdsr")
